--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
     "react/forbid-prop-types": 0,
     "react/jsx-filename-extension": 0,
     "react/no-array-index-key": 0,
+    "jsx-a11y/no-autofocus": 0,
     "jsx-a11y/label-has-for": 0,
     "jsx-a11y/no-noninteractive-element-interactions": 0,
     "jsx-a11y/no-static-element-interactions": 0,
