--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
     "not ie < 9"
   ],
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.4",
+    "@fortawesome/fontawesome-free-solid": "^5.0.8",
+    "@fortawesome/react-fontawesome": "^0.0.17",
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
     "classnames": "^2.2.5",
