--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
   ],
   "dependencies": {
     "@fortawesome/fontawesome": "^1.1.4",
+    "@fortawesome/fontawesome-free-brands": "^5.0.8",
+    "@fortawesome/fontawesome-free-regular": "^5.0.8",
     "@fortawesome/fontawesome-free-solid": "^5.0.8",
     "@fortawesome/react-fontawesome": "^0.0.17",
     "axios": "^0.17.1",
@@ -68,7 +70,6 @@
     "react-collapsible": "^2.0.3",
     "react-dom": "^16.0.0",
     "react-facebook": "^4.2.1",
-    "react-fontawesome": "^1.6.1",
     "react-markdown": "2.5.0",
     "react-responsive": "^4.0.4",
     "react-slick": "^0.18.0",
