--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "prop-types": "^15.6.0",
     "query-string": "^5.0.0",
     "react": "^16.0.0",
+    "react-autosize-textarea": "^3.0.2",
     "react-beautiful-dnd": "^4.0.1",
     "react-click-outside": "tj/react-click-outside",
     "react-collapsible": "^2.0.3",
