--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "react-responsive": "^4.0.4",
     "react-slick": "^0.18.0",
     "serialize-javascript": "^1.3.0",
+    "textarea-caret": "^3.1.0",
     "universal-router": "^6.0.0",
     "whatwg-fetch": "^2.0.3"
   },
